Bug 8964 - __param_proto causes a section type conflict with gcc-4.2 (only on alpha/ia64)
Summary: __param_proto causes a section type conflict with gcc-4.2 (only on alpha/ia64)
Status: RESOLVED CODE_FIX
Alias: None
Product: Other
Classification: Unclassified
Component: Other (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: other_other
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-09-01 05:17 UTC by Christian Heim
Modified: 2008-02-08 14:45 UTC (History)
2 users (show)

See Also:
Kernel Version: any
Subsystem:
Regression: ---
Bisected commit-id:


Attachments
kconfig for Linux 2.6.23-rc4 (alpha) (28.90 KB, application/octet-stream)
2007-09-01 05:17 UTC, Christian Heim
Details
compile log for Linux 2.6.23-rc4 (alpha) (20.60 KB, application/octet-stream)
2007-09-01 05:18 UTC, Christian Heim
Details
kconfig for Linux 2.6.23-rc4 (ia64) (24.81 KB, application/octet-stream)
2007-09-01 05:18 UTC, Christian Heim
Details
compile log for Linux 2.6.23-rc4 (ia64) (22.30 KB, application/octet-stream)
2007-09-01 05:19 UTC, Christian Heim
Details

Description Christian Heim 2007-09-01 05:17:17 UTC
Most recent kernel where this bug did not occur: none known.
Tested kernels: 2.6.20-2.6.23-rc5
Distribution: Gentoo
Hardware Environment: ia64, alpha
Software Environment: 

alpha:
Linux monolith 2.6.21.6 #1 SMP Wed Jul 11 20:01:28 CEST 2007 alpha EV68AL Tsunami GNU/Linux
 
Gnu C                  4.2.0
Gnu make               3.81
binutils               Binutils
util-linux             2.12r
mount                  2.12r
module-init-tools      3.2.2
e2fsprogs              1.40.2
Linux C Library        6.1
Dynamic linker (ldd)   2.6.1
Procps                 3.2.7
Net-tools              1.60
Kbd                    1.13
Sh-utils               6.9
udev                   114
Modules Loaded         ide_cd cdrom generic ohci_hcd usbcore alim15x3 ide_core sg

ia64:

Linux i2 2.6.22-gentoo-r2 #1 SMP PREEMPT Wed Aug 1 14:36:43 UTC 2007 ia64 31 GenuineIntel GNU/Linux
 
Gnu C                  4.2.0
Gnu make               3.81
binutils               2.17
util-linux             2.12r
mount                  2.12r
module-init-tools      3.2.2
e2fsprogs              1.39
Linux C Library        2.5
Dynamic linker (ldd)   2.5
Procps                 3.2.7
Net-tools              1.60
Kbd                    1.12
Sh-utils               6.9
udev                   104
Modules Loaded         tg3

Problem Description:

When compiling the kernel with gcc-4.2.0 on alpha/ia64, the compilation will fail due to __param_proto causing a section type conflict.
Comment 1 Christian Heim 2007-09-01 05:17:57 UTC
Created attachment 12653 [details]
kconfig for Linux 2.6.23-rc4 (alpha)
Comment 2 Christian Heim 2007-09-01 05:18:24 UTC
Created attachment 12654 [details]
compile log for Linux 2.6.23-rc4 (alpha)
Comment 3 Christian Heim 2007-09-01 05:18:44 UTC
Created attachment 12655 [details]
kconfig for Linux 2.6.23-rc4 (ia64)
Comment 4 Christian Heim 2007-09-01 05:19:08 UTC
Created attachment 12656 [details]
compile log for Linux 2.6.23-rc4 (ia64)
Comment 5 Daniel Drake 2007-09-01 06:30:09 UTC
Original bug report is at https://bugs.gentoo.org/show_bug.cgi?id=187175
Comment 6 Andrew Morton 2008-02-08 14:45:09 UTC
Merged moduleparam-fix-alpha-ia64-and-ppc64-compile-failures.patch into -mm.

Note You need to log in before you can comment on or make changes to this bug.